# Argon

./: README.md  build_output.txt  components.json  fix-imports.mjs  package-lock.json  package.json  tailwind.config.js
public/spring.icon/: icon.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: Assets.car  assetcatalog_generated_info.plist  spring.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src-tauri/: Info.plist
src-tauri/src/commands/: auth.rs  download.rs  files.rs  instances.rs  instances_extra.rs  java.rs  launch.rs  loaders.rs  mod.rs  settings.rs
src/components/: Button.tsx  DialogPrimitive.tsx  DropdownMenu.tsx  FileViewer.tsx  Files.tsx  InnerSurface.tsx  InstanceCreationModal.tsx  InstanceSettingsModal.tsx  ModBrowser.tsx  Shell.tsx  Sidebar.tsx  Tooltip.tsx  TopBar.tsx
src/components/animate-ui/components/radix/: dialog.tsx  files.tsx
src/panels/: AddAccountPanel.tsx  AuthScreen.tsx  DiscoverPanel.tsx  HomePanel.tsx  InstanceDetailPanel.tsx  InstancesPanel.tsx  ModsPanel.tsx  SettingsPanel.tsx  SetupWizard.tsx  SkinsPanel.tsx
src/store/: useLauncherStore.ts
