[package]
name = "argon-mc"
version = "0.0.0"
description = "A modern Minecraft launcher"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
futures-util = "0.3"
sha1 = "0.10"
hex = "0.4"
urlencoding = "2"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
url = "2.5"
open = "5.1"
dirs = "5.0"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
copy_dir = "0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
